--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 body{
   font-family: "Urbanist", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: white;
 }
 .urbanist-uniquifier {
