--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -334,7 +334,7 @@ main.sphere-main {
   position: absolute;
   inset: 0;
   z-index: 10;
-  background: rgba(0, 0, 0, 0.4);
+  /* background: rgba(0, 0, 0, 0.4); */
   pointer-events: none;
   opacity: 0;
   transition: opacity 500ms ease;
